# lol-wrapper-agent

./: .gitignore  Dockerfile  Dockerfile.lambda  Dockerfile.lambda_rag  Dockerfile.lambda_vectorizer  ENDPOINTS_RIOT.md  LICENSE  README.md  RIOT_API.md  __init__.py  agent.py  agent_bedrock.py  agent_rag.py  agent_strands.py  amplify.yml  lambda_handler.py  pyproject.toml  requirements.txt  run_server.py  vectorizer.py  visualizer.py  wrapped_output.json
infra/: cloudformation-template.yaml  deploy.sh  schema.graphql  setup-guide.md  setup-resolvers.sh  test-dynamodb.sh
infra/resolvers/: Mutation.requestWrapped.req.vtl  Mutation.requestWrapped.res.vtl  Mutation.updateWrappedStatus.req.vtl  Mutation.updateWrappedStatus.res.vtl  Query.getWrapped.req.vtl  Query.getWrapped.res.vtl
infra/terraform/: variables.tf
landing/: README.md  amplify.yml  astro.config.mjs  deploy-amplify.sh  env.template  package-lock.json  package.json  start.sh  tailwind.config.mjs  tsconfig.json
landing/.astro/: data-store.json  settings.json
landing/public/: _redirects  riot.txt
landing/src/components/: AgentChat.tsx  ChampionsCarousel.tsx  MasteriesCarousel.tsx  PlayerSearch.tsx  WrappedViewer.tsx
landing/src/lib/: agentClient.ts  appsyncClient.ts
landing/src/pages/: blog.astro  demo.astro  index.astro  wrapped.astro
landing/src/pages/wrapped/: [player].astro
lol_wrapper/: Dockerfile  __init__.py  analytics.py  api_server.py  champions.py  client.py  data_dragon.py  server.py  server_http.py
scripts/: test_server.sh
tests/: __init__.py  test_client.py
