[project]
name = "lol-wrapper"
version = "0.1.0"
description = "MCP server for Riot Games Champion Mastery v4 API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic-ai>=1.0.15",
    "mcp>=1.16.0",
    "aiohttp>=3.13.0",
]

[project.scripts]
lol-wrapper = "lol_wrapper.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

